--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,53 @@
 :root {
   --background-primary-color: yellow;
   --text-primary-color: green;
+  --temp-color: pink;
+  --yellow: yellow;
+  --yellow: yellow;
+  --red: #fb4659;
+  --green: #02b64a;
+
+  --pink: pink;
+  --blue: blue;
 }
 
 .light {
   --background-primary-color: yellow;
   --text-primary-color: green;
+  --temp-color: pink;
+
+  --red: #fb4659;
+  --green: #02b64a;
+
+  --pink: pink;
+  --blue: blue;
 }
 
 .dark {
   --background-primary-color: red;
   --text-primary-color: blue;
+  --temp-color: pink;
+
+  --red: #fb4659;
+  --green: #02b64a;
+
+  --pink: pink;
+  --blue: blue;
 }
 
 body {
   background-color: var(--background-primary-color);
   color: var(--text-primary-color);
+}
+
+canvas {
+  background-color: orange;
+}
+
+.trend-up {
+  color: var(--blue);
+}
+
+.trend-down {
+  color: var(--pink);
 }
